# OSS_MotionVelocityPlanner

./: CMakeLists.txt  README.md
example/: io_utils.cpp  io_utils.hpp  jsonl_utils.cpp  jsonl_utils.hpp  main_motion_velocity_planner.cpp
include/motion_velocity_planner/: adapter.hpp  longitudinal_utils.hpp  obstacle_stop.hpp  planner.hpp  smoother.hpp  types.hpp
reference_IO/: ANSWER_motion_velocity_planner.txt  TCdata_R1.xlsx  localization_kinematicstate.txt  motion_velocity_planner.txt  objects_NonObj.txt  objects_WithObj.txt  path_optimizer_WithObj.txt
src/: adapter.cpp  longitudinal_utils.cpp  obstacle_stop.cpp  planner.cpp  scenario_selector.cpp  smoother.cpp
